--- a/modernize.ipynb
+++ b/modernize.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +57,20 @@
     "            if name[-4:] == 'html': \n",
     "                file_old = os.path.join(root, name);        \n",
     "                file_new = krannog + os.path.join(root, name)[start:];\n",
-    "    \n",
-    "                open(file_new, 'wb').write(codecs.open(file_new, 'r', 'utf-16').read().replace('http://argemona.ru/files/style/site/style.css?v=10', 'style.css').encode('utf-16'))\n",
+    "                f = codecs.open(file_old, 'r', 'utf-16').read()\n",
+    "                f = f.replace('http://argemona.ru/files/style/site/style.css?v=10', '../style.css')\n",
+    "                f = f.replace('http://argemona.ru/files/js/form/jquery.css', '../jquery.css')\n",
+    "                f = f.replace('http://argemona.ru/files/js/mistake/mistakes.css', '../mistakes.css')\n",
+    "                f = f.replace('http://argemona.ru/files/js/ajax.js?v=6', '../ajax.js')\n",
+    "                f = f.replace('http://argemona.ru/files/js/algerian_400.font.js', '../algerian_400.font.js')\n",
+    "                f = f.replace('https://www.google.com/recaptcha/api.js', '../api.js')\n",
+    "                f = f.replace('http://argemona.ru/files/js/cufon-yui.js', '../cufon-yui.js')\n",
+    "                f = f.replace('http://argemona.ru/files/js/form/demo.js', '../demo.js')\n",
+    "                f = f.replace('http://argemona.ru/files/js/form/jquery_002.js', '../jquery_002.js')\n",
+    "                f = f.replace('http://argemona.ru/files/js/jquery.js', '../jquery.js')\n",
+    "                f = f.replace('http://argemona.ru/files/style/site/style.css?v=10', '../marks.js')\n",
+    "                f = f.replace('http://argemona.ru/files/js/mistake/mistakes.js', '../mistakes.js')\n",
+    "                open(file_new, 'wb').write(f.encode('utf-16'))\n",
     "    print('CSS replaced!')"
    ]
   },
@@ -95,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -108,27 +120,6 @@
    ],
    "source": [
     "replaceCSS()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "71278"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import codecs\n",
-    "open('test.html', 'wb').write(codecs.open('27/14.html', 'r', 'utf-16').read().replace('http://argemona.ru/files/style/site/style.css?v=10', 'style.css').encode('utf-16'))"
    ]
   },
   {
